--- a/assets/style.sass
+++ b/assets/style.sass
@@ -1,3 +1,5 @@
-@import "bulma/bulma"
-@import "bulma-prefers-dark/bulma-prefers-dark"
+// @import "bulma/bulma"
+// @import "bulma-prefers-dark/bulma-prefers-dark"
+@import "../node_modules/bulma/bulma.sass";
+@import "../bulma-prefers-dark/bulma-prefers-dark.sass";
 @import "fresh/core"
