--- a/assets/style.sass
+++ b/assets/style.sass
@@ -1,5 +1,3 @@
-// @import "bulma/bulma"
-// @import "bulma-prefers-dark/bulma-prefers-dark"
-@import "../node_modules/bulma/bulma.sass";
-@import "../bulma-prefers-dark/bulma-prefers-dark.sass";
+@import "bulma/bulma"
+@import "bulma-prefers-dark/bulma-prefers-dark"
 @import "fresh/core"
