--- a/assets/fresh/partials/_colors.scss
+++ b/assets/fresh/partials/_colors.scss
@@ -10,21 +10,76 @@ $primary: #4FC1EA;
 $secondary: #F39200;
 $accent: #00efb7;
 
-$fade-grey: #ededed;
-$light-grey: #EFF4F7;
-$title-grey: #A9ABAC;
-$blue-grey: #444F60;
-$muted-grey: #999;
-$light-blue-grey: #98a9c3;
-$medium-grey: #66676b;
-$basaltic-grey: #878787;
+$fade-grey: #373A3B;
+$light-grey: #424C50;
+$title-grey: #2E3132;
+$blue-grey: #2E3132;
+$muted-grey: #232526;
+$light-blue-grey: #373D3F;
+$medium-grey: #2B2F31;
+$basaltic-grey: #1F2324;
 $purple: #7F00FF;
 $mint: #11FFBD;
 $bloody: #FC354C;
 $pinky: #ff00cc;
 $frost: #004e92;
-$placeholder: #cecece;
-$dark-grey: #344258;
-$border-grey: #ccc;
-$muted-grey: #999;
-$section-grey: #fbfbfb;
+$placeholder: #1B2F36;
+$dark-grey: #161819;
+$border-grey: #374A51;
+$muted-grey: #2A3437;
+$section-grey: #1C2528;
+
+// As hex codes */
+
+$color-primary-0: #09475F; // Main Primary color */
+$color-primary-1: #076C93;
+$color-primary-2: #0C5875;
+$color-primary-3: #033142;
+$color-primary-4: #021D27;
+
+$color-secondary-1-0: #976E08; // Main Secondary color (1) */
+$color-secondary-1-1: #EBA702;
+$color-secondary-1-2: #BA880B;
+$color-secondary-1-3: #694B00;
+$color-secondary-1-4: #3E2C00;
+
+$color-secondary-2-0: #972108; // Main Secondary color (2) */
+$color-secondary-2-1: #EB2A02;
+$color-secondary-2-2: #BA2A0B;
+$color-secondary-2-3: #691200;
+$color-secondary-2-4: #3E0B00;
+
+$color-complement-0: #975208; // Main Complement color */
+$color-complement-1: #EB7B02;
+$color-complement-2: #BA660B;
+$color-complement-3: #693700;
+$color-complement-4: #3E2000;
+
+
+// THE Grays */
+
+// As hex codes */
+
+$color-primary-0: #232627; // Main Primary color */
+$color-primary-1: #373D40;
+$color-primary-2: #2C3031;
+$color-primary-3: #1F2324;
+$color-primary-4: #161C1F;
+
+$color-secondary-1-0: #3D3C37; // Main Secondary color (1) */
+$color-secondary-1-1: #646157;
+$color-secondary-1-2: #4E4C45;
+$color-secondary-1-3: #393731;
+$color-secondary-1-4: #312D22;
+
+$color-secondary-2-0: #3D3837; // Main Secondary color (2) */
+$color-secondary-2-1: #645A57;
+$color-secondary-2-2: #4E4745;
+$color-secondary-2-3: #393231;
+$color-secondary-2-4: #312622;
+
+$color-complement-0: #3D3A37; // Main Complement color */
+$color-complement-1: #645E57;
+$color-complement-2: #4E4A45;
+$color-complement-3: #393531;
+$color-complement-4: #312A22;
