--- a/assets/fresh/partials/_sections.scss
+++ b/assets/fresh/partials/_sections.scss
@@ -11,7 +11,7 @@ Section Styles
         background-color: $section-grey;
     }
     &.section-secondary {
-        background-color: $secondary;
+        background-color: $grey2-secondary-1-2;
     }
     &.section-half {
         height: 75vh !important;
