--- a/assets/fresh/partials/_colors.scss
+++ b/assets/fresh/partials/_colors.scss
@@ -2,9 +2,9 @@
 Color variables
 ========================================================================== */
 
-$white: #fff;
-$smoke-white: #fcfcfc;
-$grey-white: #f2f2f2;
+$white: #645A57;
+$smoke-white: #4E4745;
+$grey-white: #393231;
 
 $primary: #4FC1EA;
 $secondary: #F39200;
