--- a/assets/fresh/partials/_cards.scss
+++ b/assets/fresh/partials/_cards.scss
@@ -8,7 +8,7 @@ Cards and Card content styles
 .feature-card {
     width: 300px;
     height: 320px;
-    background-color: #fff;
+    background-color: $white;
     border-radius: 3px;
     margin: 0 auto;
     .card-title h4 {
