--- a/assets/fresh/partials/_colors.scss
+++ b/assets/fresh/partials/_colors.scss
@@ -3,12 +3,12 @@ Color variables
 ========================================================================== */
 
 $white: #645A57;
-$smoke-white: #4E4745;
-$grey-white: #393231;
+$smoke-white: #646157;
+$grey-white: #645E57;
 
-$primary: #4FC1EA;
-$secondary: #F39200;
-$accent: #00efb7;
+$primary: #09475F;
+$secondary: #976E08;
+$accent: #972108;
 
 $fade-grey: #373A3B;
 $light-grey: #424C50;
@@ -18,10 +18,10 @@ $muted-grey: #232526;
 $light-blue-grey: #373D3F;
 $medium-grey: #2B2F31;
 $basaltic-grey: #1F2324;
-$purple: #7F00FF;
-$mint: #11FFBD;
-$bloody: #FC354C;
-$pinky: #ff00cc;
+$purple: #390a8f;
+$mint: #046184;
+$bloody: #EB2A02;
+$pinky: #BA2A0B;
 $frost: #004e92;
 $placeholder: #1B2F36;
 $dark-grey: #161819;
@@ -54,6 +54,33 @@ $ernge-complement-1: #EB7B02;
 $ernge-complement-2: #BA660B;
 $ernge-complement-3: #693700;
 $ernge-complement-4: #3E2000;
+
+//The Blues */
+// As hex codes */
+
+$mustard-primary-0: #674900; // Main Primary mustard */
+$mustard-primary-1: #412F02;
+$mustard-primary-2: #4F3800;
+$mustard-primary-3: #9B6E00;
+$mustard-primary-4: #D39600;
+
+$purp-secondary-1-0: #1B0546; // Main Secondary purp (1) */
+$purp-secondary-1-1: #13052C;
+$purp-secondary-1-2: #150436;
+$purp-secondary-1-3: #2A086A;
+$purp-secondary-1-4: #380A90;
+
+$teal-secondary-2-0: #022F40; // Main Secondary teal (2) */
+$teal-secondary-2-1: #031E29;
+$teal-secondary-2-2: #012432;
+$teal-secondary-2-3: #034761;
+$teal-secondary-2-4: #046184;
+
+$indigo-complement-0: #061046; // Main Complement indigo */
+$indigo-complement-1: #060C2C;
+$indigo-complement-2: #050D36;
+$indigo-complement-3: #0B1A6A;
+$indigo-complement-4: #0D2290;
 
 
 // THE Grays */
