--- a/assets/fresh/partials/_hero.scss
+++ b/assets/fresh/partials/_hero.scss
@@ -15,7 +15,7 @@ Hero styles
     }
     .subtitle {
         &.is-muted {
-            color: $muted-grey;
+            color: #645A57;
         }
     }
 }
