Modifying structure and style

--- a/layouts/partials/section1.html
+++ b/layouts/partials/section1.html
@@ -13,8 +13,8 @@
     <div class="content-wrapper">
       <div class="columns">
         {{- range $tiles }}
-        <div class="column is-one-third">
-          <div class="feature-card is-bordered has-text-centered revealOnScroll delay-1" data-animation="fadeInLeft">
+        <div class="column is-two-third">
+          <div class="feature-card is-bordered has-text-right revealOnScroll delay-1" data-animation="fadeInLeft">
             <div class="card-title">
               <h4>{{ .title }}</h4>
             </div>
@@ -23,9 +23,6 @@
             </div>
             <div class="card-text">
                 <p>{{ .text }}</p>
-            </div>
-            <div class="card-action">
-              <a href="{{ .url }}" class="button btn-align-md accent-btn raised">{{ .buttonText }}</a>
             </div>
           </div>
         </div>
