more structural work

--- a/layouts/partials/section1.html
+++ b/layouts/partials/section1.html
@@ -32,6 +32,9 @@
         </div>
       </div>
       {{- end }}
+      <div class="card-action">
+        <a href="{{ .url }}" class="button btn-align-md accent-btn raised">{{ .buttonText }}</a>
+      </div>
     </div>
   </div>
 </section>
