--- a/layouts/partials/section2.html
+++ b/layouts/partials/section2.html
@@ -29,6 +29,11 @@
           </div>
         </article>
         {{- end }}
+        <p class="has-text-centered mt-20">
+          <a class="button cta is-large rounded secondary-btn raised" href="{{ $buttonLink }}">
+            {{ $buttonText }}
+          </a>
+        </p>
       </div>
     </div>
   </div>
