--- a/layouts/partials/section2.html
+++ b/layouts/partials/section2.html
@@ -2,6 +2,8 @@
 {{- $title    := index $section2 "title" }}
 {{- $subtitle := index $section2 "subtitle" }}
 {{- $features := index $section2 "features" }}
+{{- $buttonText := index $section2 "buttontext" }}
+{{- $buttonLink := index $section2 "buttonlink" }}
 <section class="section is-medium" id="section2">
   <div class="container">
     <div class="columns">
