--- a/layouts/partials/section1.html
+++ b/layouts/partials/section1.html
@@ -22,7 +22,7 @@
                 <h4>{{ .title }}</h4>
               </div>
               <div class="card-icon card-header-icon">
-                  <img src="{{ printf "/images/icons/%s.svg" .icon | relURL }}">
+                  <img src="{{ printf "/images/%s.png" .icon | relURL }}">
               </div>
             </div>
             <div class="card-content">
