--- a/layouts/partials/section2.html
+++ b/layouts/partials/section2.html
@@ -1,19 +1,25 @@
 {{- $section2 := .Site.Params.section2 }}
-{{- $title    := index $section2 "title" }}
-{{- $subtitle := index $section2 "subtitle" }}
-{{- $features := index $section2 "features" }}
-{{- $buttonText := index $section2 "buttontext" }}
-{{- $buttonLink := index $section2 "buttonlink" }}
+{{/*  {{- $title    := index $section2 "title" }}  */}}
+{{/*  {{- $subtitle := index $section2 "subtitle" }}  */}}
+{{/*  {{- $features := index $section2 "features" }}  */}}
+{{/*  {{- $buttonText := index $section2 "buttontext" }}  */}}
+{{/*  {{- $buttonLink := index $section2 "buttonlink" }}  */}}
 <section class="section is-medium" id="section2">
   <div class="container">
     <div class="columns">
       <div class="column is-centered-tablet-portrait">
-        <h1 class="title section-title">{{ $title }}</h1>
-        <h3 class="subtitle is-5 is-muted">{{ $subtitle }}</h3>
-        <div class="divider"></div>
+        {{ with .title }}<h1 class="title section-title">{{ . }}</h1>{{ end }}
+        {{/*  <h3 class="subtitle is-5 is-muted">{{ $subtitle }}</h3>  */}}
+        <div class="card">
+          <div class="card-image">
+            <figure class="image is-4by3">
+              <img src="https://bulma.io/images/placeholders/1280x960.png" alt="Placeholder image">
+            </figure>
+          </div>
+        </div>
       </div>
       <div class="column is-7 mt-60">
-        {{- range $features }}
+        {{/*  {{- range $features }}  */}}
         <article class="media icon-box">
           <figure class="media-left">
             <p class="image">
@@ -23,17 +29,20 @@
           <div class="media-content mt-50">
             <div class="content">
               <p>
-                <span class="icon-box-title">{{ .title }}</span>
+                {{/*  <span class="icon-box-title">{{ .title }}</span>
 
-                <span class="icon-box-text">{{ .text | markdownify }}</span>
+                <span class="icon-box-text">{{ .text | markdownify }}</span>  */}}
+                {{ with .content }}<p>{{ . | safeHTML }}</p>{{ end }}
               </p>
             </div>
           </div>
         </article>
-        {{- end }}
+        {{/*  {{- end }}  */}}
         <p class="has-text-centered mt-20">
-          <a class="button cta is-large rounded secondary-btn raised" href="{{ $buttonLink }}">
-            {{ $buttonText }}
+          {{ with .button }}
+            <a class="button cta is-large rounded secondary-btn raised" href="{{ .link }}">
+              {{ .text }}
+          {{ end }}
           </a>
         </p>
       </div>
