--- a/assets/fresh/core.scss
+++ b/assets/fresh/core.scss
@@ -7,6 +7,7 @@ Main SCSS file / Fresh
 @import 'partials/navbar';
 @import 'partials/dropdowns';
 @import 'partials/sections';
+@import 'partials/spotlights';
 @import 'partials/hero';
 @import 'partials/footer';
 @import 'partials/buttons';
