--- a/layouts/partials/spotlight-right.html
+++ b/layouts/partials/spotlight-right.html
@@ -1,11 +1,9 @@
-{{- $section2 := .Site.Params.section2 }}
-{{- $jpg := "jpg" }}
-{{- $png := "png" }}
-<section class="section is-medium" id="section2">
+{{/*  {{- $section2 := .Site.Params.section2 }}  */}}
+<section class="spotlight is-medium" id="spotlight2">
   <div class="container">
     <div class="columns">
       <div class="column is-centered-tablet-portrait">
-        {{ with .title }}<h1 class="title section-title">{{ . }}</h1>{{ end }}
+        {{ with .title }}<h1 class="title spotlight-title">{{ . }}</h1>{{ end }}
         {{/*  <h3 class="subtitle is-5 is-muted">{{ $subtitle }}</h3>  */}}
         <div class="card">
           <div class="card-image">
@@ -18,11 +16,11 @@
       <div class="column is-7 mt-60">
         {{/*  {{- range $features }}  */}}
         <article class="media icon-box">
-          <figure class="media-left">
+          {{/*  <figure class="media-left">
             <p class="image">
-              {{/*  <img src="{{ printf "/images/illustrations/icons/%s.svg" .icon | relURL }}">  */}}
+              <img src="{{ printf "/images/illustrations/icons/%s.svg" .icon | relURL }}">
             </p>
-          </figure>
+          </figure>  */}}
           <div class="media-content mt-50">
             <div class="content">
               <p>
