--- a/layouts/index.html
+++ b/layouts/index.html
@@ -8,11 +8,7 @@
     {{ partial "section1.html" . }}
     {{ end }}
 
-    {{/*  {{ if .Site.Params.section2 }}  */}}
-    {{/*  {{ partial "section2.html" . }}  */}}
-    {{/*  {{ end }}  */}}
-
-    {{ partial "section2.html" site.Data.section2 }}
+    {{ partial "section2" site.Data.section2 }}
 
     {{ if .Site.Params.section3 }}
     {{ partial "section3.html" . }}
