--- a/layouts/index.html
+++ b/layouts/index.html
@@ -10,6 +10,8 @@
 
     {{ partial "section2" site.Data.section2 }}
 
+    {{ partial "section6" site.Data.section6 }}
+
     {{ if .Site.Params.section3 }}
     {{ partial "section3.html" . }}
     {{ end }}
