--- a/layouts/index.html
+++ b/layouts/index.html
@@ -4,13 +4,17 @@
     {{ partial "hero.html" . }}
     {{ end }}
 
-    {{ if .Site.Params.section1 }}
+    {{/* {{ if .Site.Params.section1 }}
     {{ partial "section1.html" . }}
-    {{ end }}
+    {{ end }} */}}
+
+    {{ partial "section1" site.Data.section1 }}
 
     {{ partial "section2" site.Data.section2 }}
 
     {{ partial "section6" site.Data.section6 }}
+
+    {{ partial "section7" site.Data.section7 }}
 
     {{ if .Site.Params.section3 }}
     {{ partial "section3.html" . }}
