--- a/assets/style.sass
+++ b/assets/style.sass
@@ -1,3 +1,4 @@
 @import "bulma/bulma"
 @import "bulma-prefers-dark/bulma-prefers-dark"
+@import "bulma-timeline/bulma-timeline"
 @import "fresh/core"
