--- a/layouts/index.html
+++ b/layouts/index.html
@@ -16,13 +16,15 @@
     {{ partial "section3.html" . }}
     {{ end }}
 
+    {{ partial "timeline.html" site.Data.timeline }}
+
     {{ if .Site.Params.section4 }}
     {{ partial "section4.html" . }}
     {{ end }}
 
-    {{ if .Site.Params.section5 }}
+    {{/*  {{ if .Site.Params.section5 }}
     {{ partial "section5.html" . }}
-    {{ end }}
+    {{ end }}  */}}
 
     {{ if .Site.Params.footer }}
     {{ partial "footer.html" . }}
