layout dev continues

--- a/layouts/partials/section3.html
+++ b/layouts/partials/section3.html
@@ -24,4 +24,5 @@
       </a>
     </p>
   </div>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gojs/3.0.0/go.js" integrity="sha512-TWM/07VK5NfYGiiRp3kLxq2erJTsPWPb6bWzuNQSY4w4thdNAIRmb0Rvsy2XiVnCvEjbCsXCyO89eF/RRZb4BQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </section>
