--- a/layouts/partials/section8.html
+++ b/layouts/partials/section8.html
@@ -19,7 +19,7 @@
         <div class="card">
           <div class="card-image">
             <figure class="image is-2by1">
-              <img src="{{ .src }}" alt="{{ .alt }}">
+              <img data-lightbox="gallery" src="{{ .src }}" alt="{{ .alt }}">
             </figure>
           </div>
         </div>
@@ -32,7 +32,7 @@
         <div class="card">
           <div class="card-image">
             <figure class="image is-2by1">
-              <img src="{{ .src }}" alt="{{ .alt }}">
+              <img data-lightbox="gallery" src="{{ .src }}" alt="{{ .alt }}">
             </figure>
           </div>
         </div>
@@ -44,7 +44,7 @@
         <div class="card">
           <div class="card-image">
             <figure class="image is-2by1">
-              <img src="{{ .src }}" alt="{{ .alt }}">
+              <img data-lightbox="gallery" src="{{ .src }}" alt="{{ .alt }}">
             </figure>
           </div>
         </div>
