--- a/layouts/index.html
+++ b/layouts/index.html
@@ -3,32 +3,30 @@
     {{ if .Site.Params.hero }}
     {{ partial "hero.html" . }}
     {{ end }}
-    
+
+    {{/*<!-- Old section 1 -->*/}}
     {{ partial "section1" site.Data.section1 }}
-
-    {{ partial "section8" site.Data.section8 }}
-
+    {{/*<!-- old section 8 -->*/}}
     {{ partial "section2" site.Data.section2 }}
-
-    {{ partial "section6" site.Data.section6 }}
-
-    {{ partial "section7" site.Data.section7 }}
-
-    {{ if .Site.Params.section3 }}
-    {{ partial "section3.html" . }}
+    {{/*<!-- old section 2 -->*/}}
+    {{ partial "section3" site.Data.section3 }}
+     {{/*<!-- old section 6 -->*/}}
+    {{ partial "section4" site.Data.section4 }}
+    {{/*<!-- old section 7 -->*/}}
+    {{ partial "section5" site.Data.section5 }}
+    {{/*<!-- old section 3 -->*/}}
+    {{ if .Site.Params.section6 }}
+    {{ partial "section6.html" . }}
     {{ end }}
 
     {{ partial "timeline.html" site.Data.timeline }}
+    {{/*<!-- old section 9 -->*/}}
+    {{ partial "section7" site.Data.section7 }}
 
-    {{ partial "section9" site.Data.section9 }}
-
-    <!-- {{ if .Site.Params.section4 }}
-    {{ partial "section4.html" . }}
-    {{ end }} -->
-
-    {{/*  {{ if .Site.Params.section5 }}
-    {{ partial "section5.html" . }}
-    {{ end }}  */}}
+    {{/*<!-- old section 4 -->*/}}
+    {{ if .Site.Params.section8 }}
+    {{ partial "section8.html" . }}
+    {{ end }}
 
     {{ if .Site.Params.footer }}
     {{ partial "footer.html" . }}
