--- a/layouts/partials/section2.html
+++ b/layouts/partials/section2.html
@@ -1,41 +1,54 @@
-{{/*  {{- $section2 := .Site.Params.section2 }}  */}}
-<section class="section is-medium" id="section2">
+<section class="section section-secondary is-medium" id="section2">
   <div class="container">
+    <div class="title-wrapper has-text-centered">
+      {{ with .banner }}
+      <h2 class="title is-2">{{ .title }}</h2>
+      <h3 class="subtitle is-5 is-muted">{{ .subtitle }}</h3>
+      <div class="divider is-centered"></div>
+      {{ end }}
+    </div>
+    <!-- Yes, I am this old...it is sad, isn't it. -->
+    <br>
+    <br>
+    <br>
     <div class="columns">
+      <!-- Column One -->
       <div class="column is-centered-tablet-portrait">
-        {{ with .title }}<h1 class="title section-title">{{ . }}</h1>{{ end }}
-        {{/*  <h3 class="subtitle is-5 is-muted">{{ $subtitle }}</h3>  */}}
+        {{ with .photo1 }}
+        <h1 class="title section-title">{{ .title }}</h1>
         <div class="card">
           <div class="card-image">
-            <figure class="image is-4by3">
-              {{ with .image }}
-              <img src="{{ .src }}" alt="{{ .alt }}">
-              {{ end }}
+            <figure class="image is-2by1">
+              <a data-lightbox="gallery" href="{{ .src }}"><img src="{{ .src }}" alt="{{ .alt }}"/></a>
             </figure>
           </div>
         </div>
+        {{ end }}
       </div>
-      <div class="column is-7 mt-60">
-        <article class="media icon-box">
-          <div class="media-content mt-50">
-            {{ with .iconbox }}
-            <h3 class="icon-box-title title is-5">{{ .title }}</h3>
-            <div class="divider"></div>
-            <div class="content">
-              <p>
-                {{ with .content }}<p>{{ . | safeHTML }}</p>{{ end }}
-              </p>
-            </div>
-            {{ end }}
+      <!-- Column Two -->
+      <div class="column is-centered-tablet-portrait">
+        {{ with .photo2 }}
+        <h1 class="title section-title">{{ .title }}</h1>
+        <div class="card">
+          <div class="card-image">
+            <figure class="image is-2by1">
+              <a data-lightbox="gallery" href="{{ .src }}"><img src="{{ .src }}" alt="{{ .alt }}"/></a>
+            </figure>
           </div>
-        </article>
-        <p class="has-text-centered mt-20">
-          {{ with .button }}
-            <a class="button cta is-large rounded secondary-btn raised" href="{{ .link }}">
-              {{ .text }}
-          {{ end }}
-          </a>
-        </p>
+        </div>
+        {{ end }}
+      </div>
+      <div class="column is-centered-tablet-portrait">
+        {{ with .photo3 }}
+        <h1 class="title section-title">{{ .title }}</h1>
+        <div class="card">
+          <div class="card-image">
+            <figure class="image is-2by1">
+              <a data-lightbox="gallery" href="{{ .src }}"><img src="{{ .src }}" alt="{{ .alt }}"/></a>
+            </figure>
+          </div>
+        </div>
+        {{ end }}
       </div>
     </div>
   </div>
