--- a/layouts/partials/section4.html
+++ b/layouts/partials/section4.html
@@ -1,33 +1,39 @@
-{{- $section4 := .Site.Params.section4 }}
-{{- $title    := index $section4 "title" }}
-{{- $subtitle := index $section4 "subtitle" }}
-{{- $clients  := index $section4 "clients" }}
-<section class="section is-medium section-secondary" id="section4">
+<section class="section section-secondary is-medium" id="section4">
   <div class="container">
-
-    <div class="title-wrapper has-text-centered">
-      <h2 class="title is-2 light-text is-spaced">{{ $title }}</h2>
-      {{- with $subtitle }}
-      <h3 class="subtitle is-5 light-text">{{ . }}</h3>
-      {{- end }}
-    </div>
-
-    <div class="content-wrapper">
-      <div class="columns is-vcentered">
-        {{- range $clients }}
-        <div class="column is-4">
-          <figure class="testimonial">
-            <blockquote>
-              {{ .quote }}
-            </blockquote>
-            <div class="author">
-              <img src="{{ printf "/images/illustrations/faces/%s.png" (string .img) | relURL }}" alt=""/>
-              <h5>{{ .name }}</h5>
-              <span>{{ .job }}</span>
-            </div>            
-          </figure>
+    <div class="columns">
+      <div class="column is-7 mt-60">
+        <article class="media icon-box">
+          <div class="media-content mt-50">
+            {{ with .iconbox }}
+            <h3 class="icon-box-title title is-5">{{ .title }}</h3>
+            <div class="divider"></div>
+            <div class="content">
+              <p>
+                <p>{{ .content | safeHTML }}</p>
+              </p>
+            </div>
+            {{ end }}
+          </div>
+        </article>
+        <p class="has-text-centered mt-20">
+          {{ with .button }}
+            <a class="button cta is-large rounded secondary-btn raised" href="{{ .link }}">
+            {{ .text }}
+          {{ end }}
+          </a>
+        </p>
+      </div>
+      <div class="column is-centered-tablet-portrait">
+        {{ with .title }}<h1 class="title section-title">{{ . }}</h1>{{ end }}
+        <div class="card">
+          <div class="card-image">
+            <figure class="image is-4by3">
+              {{ with .image }}
+                <img src="{{ .src }}" alt="{{ .alt }}">
+              {{ end }}
+            </figure>
+          </div>
         </div>
-        {{- end }}
       </div>
     </div>
   </div>
