--- a/layouts/partials/section6.html
+++ b/layouts/partials/section6.html
@@ -1,42 +1,28 @@
-{{/*  {{- $section6 := .Site.Params.section6 }}  */}}
-<section class="section section-secondary is-medium" id="section6">
+{{- $section3   := .Site.Params.section6 }}
+{{- $title      := index $section3 "title" }}
+{{- $subtitle   := index $section3 "subtitle" }}
+{{- $image      := index $section3 "image" }}
+{{- $buttonText := index $section3 "buttontext" }}
+{{- $buttonLink := index $section3 "buttonlink" }}
+<section class="section section-feature-grey is-medium" id="section6">
   <div class="container">
     <div class="columns">
-      <div class="column is-7 mt-60">
-        <article class="media icon-box">
-          <div class="media-content mt-50">
-            {{ with .iconbox }}
-            <h3 class="icon-box-title title is-5">{{ .title }}</h3>
-            <div class="divider"></div>
-            <div class="content">
-              <p>
-                {{ with .content }}
-              <p>{{ . | safeHTML }}</p>{{ end }}
-              </p>
-            </div>
-            {{ end }}
-          </div>
-        </article>
-        <p class="has-text-centered mt-20">
-          {{ with .button }}
-          <a class="button cta is-large rounded secondary-btn raised" href="{{ .link }}">
-            {{ .text }}
-            {{ end }}
-          </a>
-        </p>
-      </div>
-      <div class="column is-centered-tablet-portrait">
-        {{ with .title }}<h1 class="title section-title">{{ . }}</h1>{{ end }}
-        <div class="card">
-          <div class="card-image">
-            <figure class="image is-4by3">
-              {{ with .image }}
-              <img src="{{ .src }}" alt="{{ .alt }}">
-              {{ end }}
-            </figure>
-          </div>
+      <div class="column is-10 is-offset-1">
+        <div class="has-text-centered">
+          <img class="pushed-image" src="{{ printf "/images/%s" $image | relURL }}">
         </div>
       </div>
     </div>
+
+    <div class="title-wrapper has-text-centered">
+      <h2 class="title is-2">{{ $title }}</h2>
+      <h3 class="subtitle is-5 is-muted">{{ $subtitle }}</h3>
+    </div>
+    <p class="has-text-centered mt-20">
+      <a class="button cta is-large rounded secondary-btn raised" href="{{ $buttonLink }}">
+        {{ $buttonText }}
+      </a>
+    </p>
   </div>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gojs/3.0.0/go.js" integrity="sha512-TWM/07VK5NfYGiiRp3kLxq2erJTsPWPb6bWzuNQSY4w4thdNAIRmb0Rvsy2XiVnCvEjbCsXCyO89eF/RRZb4BQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </section>
