--- a/layouts/partials/section8.html
+++ b/layouts/partials/section8.html
@@ -1,54 +1,33 @@
-<section class="section section-secondary is-medium" id="section8">
+{{- $section8 := .Site.Params.section8 }}
+{{- $title    := index $section8 "title" }}
+{{- $subtitle := index $section8 "subtitle" }}
+{{- $clients  := index $section8 "clients" }}
+<section class="section is-medium section-secondary" id="section8">
   <div class="container">
+
     <div class="title-wrapper has-text-centered">
-      {{ with .banner }}
-      <h2 class="title is-2">{{ .title }}</h2>
-      <h3 class="subtitle is-5 is-muted">{{ .subtitle }}</h3>
-      <div class="divider is-centered"></div>
-      {{ end }}
+      <h2 class="title is-2 light-text is-spaced">{{ $title }}</h2>
+      {{- with $subtitle }}
+      <h3 class="subtitle is-5 light-text">{{ . }}</h3>
+      {{- end }}
     </div>
-    <!-- Yes, I am this old...it is sad, isn't it. -->
-    <br>
-    <br>
-    <br>
-    <div class="columns">
-      <!-- Column One -->
-      <div class="column is-centered-tablet-portrait">
-        {{ with .photo1 }}
-        <h1 class="title section-title">{{ .title }}</h1>
-        <div class="card">
-          <div class="card-image">
-            <figure class="image is-2by1">
-              <img data-lightbox="gallery" src="{{ .src }}" alt="{{ .alt }}">
-            </figure>
-          </div>
+
+    <div class="content-wrapper">
+      <div class="columns is-vcentered">
+        {{- range $clients }}
+        <div class="column is-4">
+          <figure class="testimonial">
+            <blockquote>
+              {{ .quote }}
+            </blockquote>
+            <div class="author">
+              <img src="{{ printf "/images/illustrations/faces/%s.png" (string .img) | relURL }}" alt=""/>
+              <h5>{{ .name }}</h5>
+              <span>{{ .job }}</span>
+            </div>            
+          </figure>
         </div>
-        {{ end }}
-      </div>
-      <!-- Column Two -->
-      <div class="column is-centered-tablet-portrait">
-        {{ with .photo2 }}
-        <h1 class="title section-title">{{ .title }}</h1>
-        <div class="card">
-          <div class="card-image">
-            <figure class="image is-2by1">
-              <img data-lightbox="gallery" src="{{ .src }}" alt="{{ .alt }}">
-            </figure>
-          </div>
-        </div>
-        {{ end }}
-      </div>
-      <div class="column is-centered-tablet-portrait">
-        {{ with .photo3 }}
-        <h1 class="title section-title">{{ .title }}</h1>
-        <div class="card">
-          <div class="card-image">
-            <figure class="image is-2by1">
-              <img data-lightbox="gallery" src="{{ .src }}" alt="{{ .alt }}">
-            </figure>
-          </div>
-        </div>
-        {{ end }}
+        {{- end }}
       </div>
     </div>
   </div>
