--- a/layouts/partials/section7.html
+++ b/layouts/partials/section7.html
@@ -17,6 +17,13 @@
           </div>
         </div>
       </div>
+      {{ with .button}}
+      <p class="has-text-centered mt-20">
+          <a class="button cta is-large rounded secondary-btn raised" href="{{ .link }}">
+            {{ .text }}
+          </a>
+      </p>
+      {{ end }}
     </div>
   </div>
 </section>
