--- a/assets/style.sass
+++ b/assets/style.sass
@@ -1,4 +1,5 @@
 @import "bulma/bulma"
 @import "bulma-prefers-dark/bulma-prefers-dark"
 @import "bulma-timeline/bulma-timeline"
+@import "bulma-carousel/bulma-carousel"
 @import "fresh/core"
